# serializer version: 1
# name: test_migration_streamlit_v1_to_v2[migration_snowpark_V1_to_V2]
  '''
  defaults:
    project_name: my_snowpark_project
    stage: dev_deployment
  definition_version: '2'
  entities:
    func1:
      artifacts: app/
      external_access_integrations: []
      handler: app.func1_handler
      identifier:
        name: func1
      imports: []
      returns: string
      runtime: '3.10'
      secrets: {}
      signature:
      - arg_type: string
        default: default value
        name: a
      - arg_type: variant
        name: b
      stage: dev_deployment
      type: function
    procedureName:
      artifacts: app/
      execute_as_caller: false
      external_access_integrations: []
      handler: hello
      identifier:
        name: procedureName
      imports: []
      returns: string
      secrets: {}
      signature:
      - arg_type: string
        name: name
      stage: dev_deployment
      type: procedure
    test:
      artifacts: app/
      execute_as_caller: false
      external_access_integrations: []
      handler: test
      identifier:
        name: test
      imports: []
      returns: string
      runtime: '3.10'
      secrets: {}
      signature: ''
      stage: dev_deployment
      type: procedure
  
  '''
# ---
# name: test_migration_streamlit_v1_to_v2[migration_snowpark_V1_to_V2].1
  '''
  definition_version: 1
  snowpark:
    project_name: "my_snowpark_project"
    stage_name: "dev_deployment"
    src: "app/"
    functions:
      - name: func1
        handler: "app.func1_handler"
        signature:
          - name: "a"
            type: "string"
            default: "default value"
          - name: "b"
            type: "variant"
        returns: string
        runtime: 3.10
    procedures:
      - name: procedureName
        handler: "hello"
        signature:
          - name: "name"
            type: "string"
        returns: string
      - name: test
        handler: "test"
        signature: ""
        returns: string
        runtime: "3.10"
  
  '''
# ---
# name: test_migration_streamlit_v1_to_v2[migration_streamlit_V1_to_V2]
  '''
  definition_version: '2'
  entities:
    test_streamlit:
      artifacts:
      - streamlit_app.py
      - environment.yml
      - pages
      identifier:
        name: test_streamlit
      main_file: streamlit_app.py
      pages_dir: None
      query_warehouse: test_warehouse
      stage: streamlit
      title: My Fancy Streamlit
      type: streamlit
  
  '''
# ---
# name: test_migration_streamlit_v1_to_v2[migration_streamlit_V1_to_V2].1
  '''
  definition_version: 1
  streamlit:
    name: test_streamlit
    stage: streamlit
    query_warehouse: test_warehouse
    main_file: "streamlit_app.py"
    title: "My Fancy Streamlit"
  
  '''
# ---
# name: test_migration_v1_to_v2[migration_snowpark_V1_to_V2]
  '''
  defaults:
    project_name: my_snowpark_project
    stage: dev_deployment
  definition_version: '2'
  entities:
    func1:
      artifacts:
      - app
      external_access_integrations: []
      handler: app.func1_handler
      identifier:
        name: func1
      imports: []
      returns: string
      runtime: '3.10'
      secrets: {}
      signature:
      - arg_type: string
        default: default value
        name: a
      - arg_type: variant
        name: b
      stage: dev_deployment
      type: function
    procedureName:
      artifacts:
      - app
      execute_as_caller: false
      external_access_integrations: []
      handler: hello
      identifier:
        name: procedureName
      imports: []
      returns: string
      secrets: {}
      signature:
      - arg_type: string
        name: name
      stage: dev_deployment
      type: procedure
  
  '''
# ---
# name: test_migration_v1_to_v2[migration_snowpark_V1_to_V2].1
  '''
  definition_version: 1
  snowpark:
    project_name: "my_snowpark_project"
    stage_name: "dev_deployment"
    src: "app/"
    functions:
      - name: func1
        handler: "app.func1_handler"
        signature:
          - name: "a"
            type: "string"
            default: "default value"
          - name: "b"
            type: "variant"
        returns: string
        runtime: 3.10
    procedures:
      - name: procedureName
        handler: "hello"
        signature:
          - name: "name"
            type: "string"
        returns: string
  
  '''
# ---
# name: test_migration_v1_to_v2[migration_streamlit_V1_to_V2]
  '''
  definition_version: '2'
  entities:
    test_streamlit:
      artifacts:
      - streamlit_app.py
      - environment.yml
      - pages
      identifier:
        name: test_streamlit
      main_file: streamlit_app.py
      pages_dir: None
      query_warehouse: test_warehouse
      stage: streamlit
      title: My Fancy Streamlit
      type: streamlit
  
  '''
# ---
# name: test_migration_v1_to_v2[migration_streamlit_V1_to_V2].1
  '''
  definition_version: 1
  streamlit:
    name: test_streamlit
    stage: streamlit
    query_warehouse: test_warehouse
    main_file: "streamlit_app.py"
    title: "My Fancy Streamlit"
  
  '''
# ---
